# GameEngine

./: .gitignore  CMakeLists.txt  CompileShaders.bat  LICENSE.txt  README.md  app.rc
src/: engine.cpp  engine.hpp  engine_types.hpp  hydraulic_erosion.cpp  hydraulic_erosion.hpp  main.cpp  modules.cpp  modules.hpp
src/core/: asset.cpp  asset.hpp  asset_data.cpp  asset_data.hpp  asset_database.hpp  asset_manager.hpp  data_object.hpp  game_object.cpp  game_object.hpp  input.cpp  input.hpp  mesh.cpp  mesh.hpp  object.hpp  object_manager.cpp  object_manager.hpp  random.cpp  random.hpp  scene.cpp  scene.hpp  transform.cpp  transform.hpp
src/core/assets/: asset_texture.hpp  scene_asset.hpp  shader_asset.hpp
src/core/components/: component.hpp  mesh_components.hpp  transform.cpp  transform.hpp
src/editor/: editor.hpp  gizmos.hpp
src/graphics/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  compute_pipeline.cpp  compute_pipeline.hpp  compute_resource.cpp  compute_resource.hpp  compute_shader.cpp  compute_shader.hpp  containers.cpp  containers.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  graphics.cpp  graphics.hpp  graphics_containers.hpp  graphics_mesh.cpp  graphics_mesh.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pipeline_manager.cpp  pipeline_manager.hpp  render_graph.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_base.cpp  (+11 more)
src/graphics/buffers/: buffer.hpp  graphics_mesh.hpp  material.cpp  material.hpp  texture.cpp  texture.hpp
src/graphics/compute/: compute_pipeline.cpp  compute_pipeline.hpp  compute_resource.cpp  compute_resource.hpp  compute_shader.cpp  compute_shader.hpp
src/graphics/internal/: descriptors.cpp  descriptors.hpp  device.cpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline_manager.cpp  pipeline_manager.hpp  render_pass.cpp  render_pass.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
src/physics/: raycast.hpp
src/procedural/: noise.cpp  noise.hpp
src/utils/: console.cpp  console.hpp  debug.cpp  debug.hpp  file_util.cpp  file_util.hpp  imgui_styles.hpp  random.cpp  random.hpp  smart_reference.hpp
